<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="https://"
        android:inputType="textUri"
        android:key="@string/settings_address_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_address_label" />
    <EditTextPreference
        android:defaultValue="1111"
        android:inputType="numberDecimal"
        android:key="@string/settings_port_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_port_label" />
    <EditTextPreference
        android:defaultValue="user"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_username_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_username_label" />
    <EditTextPreference
        android:defaultValue=""
        android:inputType="textPassword"
        android:key="@string/settings_password_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_password_label" />
</PreferenceScreen>